# vs-mlrt

./: README.md
.github/workflows/: linux-migraphx.yml  linux-migx.yml  linux-ncnn.yml  linux-ort.yml  linux-ov-arm64.yml  linux-ov.yml  linux-trt-arm64.yml  linux-trt-rtx.yml  linux-trt.yml  macos-ort.yml  windows-cuda-dependency.yml  windows-hip-dependency.yml  windows-migx.yml  windows-ncnn.yml  windows-ort-dependency.yml  windows-ort.yml  windows-ov.yml  windows-release.yml  windows-trt.yml  windows-trt_rtx.yml
common/: convert_float_to_float16.cpp  convert_float_to_float16.h  onnx_utils.cpp  onnx_utils.h
scripts/: vsmlrt.py
vsiree/: CMakeLists.txt  config.h.in  vs_iree.cpp
vsmigraphx/: CMakeLists.txt  vs_migraphx.cpp
vsmigx/: CMakeLists.txt  README.md  vs_migraphx.cpp  win32.cpp
vsncnn/: CMakeLists.txt  onnx2ncnn.cpp  onnx2ncnn.hpp  vs_ncnn.cpp
vsort/: CMakeLists.txt  README.md  convert_float_to_float16.cpp  vs_onnxruntime.cpp  win32.cpp
vsov/: CMakeLists.txt  README.md  vs_openvino.cpp  win32.cpp
vstrt/: CMakeLists.txt  README.md  cuda_helper.h  cuda_utils.h  inference_helper.h  trt_utils.h  utils.h  vs_tensorrt.cpp  win32.cpp
vstrt/trtexec/: CMakeLists.txt  logfile.cpp  trtexec.patch
